<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:id="@+id/divider"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="10dp"
        android:layout_height="0dp" />
    <Button
        android:id="@+id/order_more_button"
        style="@style/EditorButtons"
        android:layout_toRightOf="@id/divider"
        android:text="@string/order_more" />
    <Button
        android:id="@+id/add_image_button"
        style="@style/EditorButtons"
        android:layout_toLeftOf="@id/divider"
        android:text="@string/add_image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_name" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Item name field -->
                <EditText
                    android:id="@+id/edit_item_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <TextView
                    android:id="@+id/label_currency"
                    style="@style/EditorUnitsStyle"
                    tools:text="$" />
                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_price"
                    android:layout_toLeftOf="@id/label_currency"
                    android:inputType="numberDecimal" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <Button
                    android:id="@+id/decrease_quantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:text="-"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantity_field"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toRightOf="@id/decrease_quantity"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="63" />

                <Button
                    android:id="@+id/increase_quantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@id/quantity_field"
                    android:text="+"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantity_units"
                    style="@style/EditorUnitsStyle"
                    android:paddingRight="0dp"
                    android:text="@string/units" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/supplier_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Item name field -->
                <EditText
                    android:id="@+id/edit_supplier"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_supplier"
                    android:ellipsize="end"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/increment_decrement_factor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_inc_decr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_factor"
                android:inputType="number"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/image_preview"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/item_image"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:layout_width="150dp"
            android:layout_height="150dp" />

    </LinearLayout>
</RelativeLayout>
